--- a/Notes/CS111.tex
+++ b/Notes/CS111.tex
@@ -3367,7 +3367,16 @@
 %========================================================
 
 %========================================================
-\section{L16: Leases}
+\section{L17: Arpaci-Dusseau: Chapter 49: Sun’s Network File System (NFS)}
+\subsection{Communication Basics}
+    \begin{easylist}  
+    \ListProperties(Hide=100, Hang=true, Progressive=4ex, Style*=--\ , Style2*=$\bullet\ $)
+        & 
+    \end{easylist}
+%========================================================
+
+%========================================================
+\section{L17: Arpaci-Dusseau: Chapter 50: The Andrew File System (AFS)}
 \subsection{Communication Basics}
     \begin{easylist}  
     \ListProperties(Hide=100, Hang=true, Progressive=4ex, Style*=--\ , Style2*=$\bullet\ $)
